[package]
name = "raft"
version = "0.1.0"
authors = ["Giovanni Cuccu <giovanni.cuccu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures="0.3.12"
chrono="0.4.19"
rayon="1.5.0"
crc = "2.0.0-rc.1"
walkdir = "2"
sled="0.34.6"

[build-dependencies]
tonic-build = "0.4"